--- a/box_layout.kv
+++ b/box_layout.kv
@@ -1,5 +1,5 @@
 BoxLayout:
-    orientation: 'vertical'
+    orientation: 'horizontal'
     Button:
         text: 'Clear'
         on_press: app.clear()
